# LoResLift

./: .gitignore  main_HumanEval.ipynb  pyproject.toml
src/HumanEval/: model.py  pipelines.py
src/m-humaneval/: config.py  dataset.py  main.ipynb  prompts.py  utils.py
